--- a/index.html
+++ b/index.html
@@ -1,17 +1,127 @@
-<!DOCTYPE html> 
- <html>
-GUIA BASE DE DATOS
- <head> 
- <title>Base de Datos</title>
- <style>    
-    p {color:red; font-size:20px;}    
-</style>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Manage Users</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-bottom: 20px;
+        }
+        table, th, td {
+            border: 1px solid #ccc;
+        }
+        th, td {
+            padding: 10px;
+            text-align: left;
+        }
+        th {
+            background-color: #f4f4f4;
+        }
+        form {
+            margin-bottom: 20px;
+        }
+        input[type="text"], input[type="number"] {
+            padding: 5px;
+            margin-right: 10px;
+            width: 200px;
+        }
+        input[type="submit"] {
+            padding: 5px 10px;
+        }
+    </style>
 </head>
- <body> 
- <h1>TITULO 1</h1> 
- <p>PARRAFO 1</p>  
-</body> 
- </html> 
+<body>
+    <h1>Manage Users</h1>
 
- 
+    <h2>Users Table</h2>
+    <table id="usersTable">
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Name</th>
+                <th>Email</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
+
+    <h2>Insert Default Data</h2>
+    <form id="insertDefaultDataForm">
+        <input type="submit" value="Insert Default Data">
+    </form>
+
+    <h2>Delete User by ID</h2>
+    <form id="deleteUserForm">
+        <input type="number" id="userId" placeholder="User ID">
+        <input type="submit" value="Delete User">
+    </form>
+
+    <h2>Delete All Users</h2>
+    <form id="deleteAllUsersForm">
+        <input type="submit" value="Delete All Users">
+    </form>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            // Fetch and display users data
+            fetch('/read-data')
+                .then(response => response.json())
+                .then(data => {
+                    const usersTable = document.getElementById('usersTable').querySelector('tbody');
+                    usersTable.innerHTML = '';
+                    data.forEach(user => {
+                        const row = usersTable.insertRow();
+                        row.insertCell(0).textContent = user.id;
+                        row.insertCell(1).textContent = user.name;
+                        row.insertCell(2).textContent = user.email;
+                    });
+                });
+
+            // Handle Insert Default Data form submission
+            document.getElementById('insertDefaultDataForm').addEventListener('submit', function(event) {
+                event.preventDefault();
+                fetch('/insert-default-data', { method: 'POST' })
+                    .then(response => response.text())
+                    .then(message => {
+                        alert(message);
+                        location.reload(); // Reload the page to update the users table
+                    });
+            });
+
+            // Handle Delete User by ID form submission
+            document.getElementById('deleteUserForm').addEventListener('submit', function(event) {
+                event.preventDefault();
+                const userId = document.getElementById('userId').value;
+                fetch(`/delete-data/${userId}`, { method: 'DELETE' })
+                    .then(response => response.json())
+                    .then(data => {
+                        if (data.length > 0) {
+                            alert('User deleted successfully');
+                        } else {
+                            alert('User not found');
+                        }
+                        location.reload(); // Reload the page to update the users table
+                    });
+            });
+
+            // Handle Delete All Users form submission
+            document.getElementById('deleteAllUsersForm').addEventListener('submit', function(event) {
+                event.preventDefault();
+                fetch('/delete-all-data', { method: 'DELETE' })
+                    .then(response => response.text())
+                    .then(message => {
+                        alert(message);
+                        location.reload(); // Reload the page to update the users table
+                    });
+            });
+        });
+    </script>
+</body>
+</html>
